--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "express": "4.17.1",
     "express-winston": "4.0.3",
     "helmet": "3.22.0",
+    "mongoose": "5.9.14",
     "typescript": "3.9.2",
     "winston": "3.2.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.6",
-    "@types/node": "^14.0.1",
+    "@types/express": "4.17.6",
+    "@types/helmet": "0.0.47",
+    "@types/node": "14.0.1",
     "@typescript-eslint/eslint-plugin": "2.33.0",
     "@typescript-eslint/parser": "2.33.0",
     "chai": "4.2.0",
