--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "build/main.js",
   "dependencies": {
+    "@types/mongodb": "3.5.17",
+    "@types/mongoose": "5.7.19",
     "body-parser": "1.19.0",
     "cors": "2.8.5",
     "debug": "4.1.1",
@@ -11,6 +13,7 @@
     "express": "4.17.1",
     "express-winston": "4.0.3",
     "helmet": "3.22.0",
+    "mongodb": "3.5.7",
     "mongoose": "5.9.14",
     "typescript": "3.9.2",
     "winston": "3.2.1"
