--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "debug": "4.1.1",
     "dotenv": "8.2.0",
     "express": "4.17.1",
-    "express-winston": "4.0.3",
     "helmet": "3.22.0",
     "mongodb": "3.5.7",
     "mongoose": "5.9.14",
@@ -20,6 +19,7 @@
     "winston": "3.2.1"
   },
   "devDependencies": {
+    "@types/cors": "2.8.6",
     "@types/express": "4.17.6",
     "@types/helmet": "0.0.47",
     "@types/node": "14.0.1",
