--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,8 @@
     "root": true,
     "parser": "@typescript-eslint/parser",
     "rules": {
-        "semi":"error"
+        "semi":"error",
+        "@typescript-eslint/interface-name-prefix": "off"
     },
     "plugins": [
         "@typescript-eslint"
