--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cors": "2.8.5",
     "dotenv": "8.2.0",
     "express": "4.17.1",
+    "express-jwt": "5.3.3",
     "helmet": "3.22.0",
     "joi": "14.3.1",
     "jsonwebtoken": "8.5.1",
@@ -19,14 +20,14 @@
     "winston": "3.2.1"
   },
   "devDependencies": {
-    "typescript": "3.9.2",
-    "@types/mongodb": "3.5.17",
-    "@types/mongoose": "5.7.19",
     "@types/bcrypt": "3.0.0",
     "@types/cors": "2.8.6",
     "@types/express": "4.17.6",
+    "@types/express-jwt": "0.0.42",
     "@types/helmet": "0.0.47",
     "@types/jsonwebtoken": "8.5.0",
+    "@types/mongodb": "3.5.17",
+    "@types/mongoose": "5.7.19",
     "@types/node": "14.0.1",
     "@typescript-eslint/eslint-plugin": "2.33.0",
     "@typescript-eslint/parser": "2.33.0",
@@ -34,7 +35,8 @@
     "eslint": "7.0.0",
     "mocha": "7.1.2",
     "nodemon": "2.0.4",
-    "ts-node": "8.10.1"
+    "ts-node": "8.10.1",
+    "typescript": "3.9.2"
   },
   "scripts": {
     "build": "tsc",
